--- a/eksamen/index.html
+++ b/eksamen/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,6 +43,13 @@
                 </div>
             </div>
         </nav>
+
+        <div class="arrow-scroll">
+            <span class="arrow"></span>
+            <span class="arrow"></span>
+            <span class="arrow"></span>
+        </div>
+
     </header>
        <!-- Header + Navigation - Slut -->
 
